# zefir-backend

./: .env-template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  example_config.ini  pylama.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
nginx/: .bash  Dockerfile  nginx.conf-template
simple-data-case/: area_scenario_mapping.json  fuel_units.json  model_config.ini
simple-data-case/parameters/: year_sample.csv
simple-data-case/results/scenario_1/: Objective_func_value.csv
simple-data-case/source_csv/capacity_factors/: Profiles.csv
simple-data-case/source_csv/conversion_rate/: HEAT_PUMP.csv
simple-data-case/source_csv/demand_chunks/: Demand_Chunks.csv  test_1.csv
simple-data-case/source_csv/demand_types/: DOWNTOWN.csv  NEW_HOUSES.csv  OLD_HOUSES.csv  SMALL_OFFICES.csv
simple-data-case/source_csv/fuels/: Emission_Per_Unit.csv  Energy_Per_Unit.csv
simple-data-case/source_csv/generator_types/: Efficiency.csv  Emission_Reduction.csv  Generator_Type_Energy_Carrier.csv  Generator_Type_Energy_Type.csv  Generator_Types.csv
simple-data-case/source_csv/initial_state/: Technology.csv  TechnologyStack.csv
simple-data-case/source_csv/storage_types/: Parameters.csv
simple-data-case/source_csv/structure/: Aggregates.csv  Buses.csv  Emission_Fees_Emission_Types.csv  Emission_Types.csv  Energy_Types.csv  Generator_Emission_Fees.csv  Generators.csv  Lines.csv  Power_Reserve.csv  Storages.csv  TechnologyStack_Aggregate.csv  TechnologyStack_Buses.csv  TechnologyStack_Buses_out.csv  Technology_Bus.csv  Transmission_Fees.csv
simple-data-case/static_data/: scenarios_description.json
simple-data-case/static_data/static_aggr_data/: other.csv  single_family.csv
simple-data-case/static_data/static_plots/: heat_enable.csv
simple-data-case/translation/: energy_translation.json  fuel_translation.json  lbs_translation.json  names_translation.json  tags_translation.json
simple-data-case/transport/scenario_1/: capex.csv  emission_SO2.csv
tests/: __init__.py  conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_config_parser.py  test_version.py
tests/unit/zefir_data_endpoint/: test_areas.py  test_buildings_map.py  test_fuel_units.py  test_mapping.py  test_points_map.py  test_scenario_description.py  test_static_aggr_data.py  test_static_plots.py  (+3 more)
zefir_api/: __init__.py  license_header.txt
zefir_api/api/: config.py  env_params.py  gunicorn_config.py  loader.py  main.py  map.py  mapping.py  parameters.py  static_data.py  translation.py  transport_loader.py  utils.py  zefir_engine.py
(+223 files in other folders)
